Exp-1/output/f00244_train_model_test.err
  File "output/f00244_train_model_test.py", line 10
    def test_train_model()
                         ^
SyntaxError: invalid syntax
